# napari-cursor-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_cursor_tracker/: __init__.py  _sample_data.py  _widget.py  napari.yaml
src/napari_cursor_tracker/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
